[gd_scene load_steps=5 format=2]

[ext_resource path="res://Blastzones.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1452.35, 33.3749 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1460.55, 33.3749 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 33.896, 924.65 )

[node name="Blastzones" type="Node2D"]
script = ExtResource( 1 )

[node name="North" type="Area2D" parent="."]
position = Vector2( 9.3, -1037.07 )
monitorable = false
collision_layer = 16
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="North"]
shape = SubResource( 1 )

[node name="South" type="Area2D" parent="."]
position = Vector2( 11, 1148.75 )
monitorable = false
collision_layer = 16
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="South"]
shape = SubResource( 2 )

[node name="West" type="Area2D" parent="."]
position = Vector2( 1619.65, 128 )
monitorable = false
collision_layer = 16
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="West"]
shape = SubResource( 3 )

[node name="East" type="Area2D" parent="."]
position = Vector2( -1579.87, 136 )
monitorable = false
collision_layer = 16
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="East"]
shape = SubResource( 3 )

[connection signal="body_entered" from="North" to="." method="_on_North_body_entered"]
[connection signal="body_exited" from="North" to="." method="_on_North_body_exited"]
[connection signal="body_entered" from="South" to="." method="_on_South_body_entered"]
[connection signal="body_entered" from="West" to="." method="_on_West_body_entered"]
[connection signal="body_entered" from="East" to="." method="_on_East_body_entered"]
